nginx-ingress/hands-on/secure-ingress/secure-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: secure-app-svc
  labels:
    app: secure-app
spec:
  type: ClusterIP
  selector:
    app: secure-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
