nginx-ingress/hands-on/secure-ingress/secure-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secure-app-ingress
  labels:
    app: secure-app
  annotations:
    cert-manager.io/issuer: letsencrypt-nginx-cert
spec:
  tls:
  - hosts:
    - echopod.muppedaanvesh.com
    secretName: letsencrypt-nginx-cert-echopod
  ingressClassName: nginx
  rules:
  - host: "echopod.muppedaanvesh.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: secure-app-svc
            port:
              number: 80
